<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, DrugBoxActivity!</string>
    <string name="app_name">DrugBox</string>
    
    <!-- Activity names-->
    <string name="act_add_drug">Add drug</string>    
    <string name="act_list_drugs">Drugs list</string>
    <string name="act_drug_details">Drug details</string>
    <string name="act_edit_drug">Edit drug</string>
    <string name="act_expired_drugs">Expired drugs</string>
    
    <!-- Button labels -->
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_close">Close</string>
    <string name="button_add">Add</string>
    <string name="button_search">Search</string>
    <string name="button_list">List</string>
    <string name="button_save">Save</string>
    
    <!-- Add Drug labels -->
    <string name="label_name">Name</string>
    <string name="label_name_box">Drug name</string>    
    <string name="label_type">Type</string>
    <string name="label_brand">Brand</string>
    <string name="label_brand_box">Drug brand</string>
    <string name="label_purchase">Purchasing date</string>
    <string name="label_expire">Expiring date</string>
    <string name="label_pathology">Pathology</string>
    <string name="label_pathology_box">Pathology</string>
    <string name="label_administration">Administration</string>
    <string name="label_administration_box">Administration</string>
    <string name="label_min_age">Min age</string>
    <string name="label_min_age_box">Min age of administration</string>
    <string name="label_category">Category</string>
    
    <string name="drug_prompt">Choose a type</string>
    <string-array name="drug_types">
        <item>Not defined</item>
        <item>Pills</item>
        <item>Vials</item>
        <item>Syrup</item>
        <item>Suppository</item>
        <item>Other</item>
    </string-array>
    
    <string name="category_prompt">Choose a category</string>
    <string-array name="drug_category">
        <item>Not defined</item>
        <item>Medicine</item>
        <item>Generic</item>
        <item>Other</item>
    </string-array>
    
    <!-- List Drugs -->
    <string name="no_item">No drugs</string>
    
    <!-- Expired Drugs -->
    <string name="expirationDate">Expired on %s</string>
    
    <!-- Toast messages -->
    <string name="msg_added">Drug saved</string>
    <string name="msg_deleted">Drug deleted</string>
    <string name="msg_updated">Drug updated</string>
    
    <!-- Option Menu -->
    <string name="opt_edit_drug">Edit</string>
    <string name="opt_delete_drug">Delete</string>
    
    <!-- Alert Dialog -->
    <string name="dialog_wrong_date">The expiry date is earlier than the date of purchase.\nDo you want continue anyway?</string>
    <string name="dialog_missed_name">The drug\'s name cannot be empty.\nYou need to insert the name</string>
    
    <!-- Notifications -->
    <string name="notif_expired_title">DrugBox</string>
    <string name="notif_expired_single">1 drug expired</string>
    <string name="notif_expired_multi">%d drugs expired</string>
</resources>