<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <ScrollView 
        android:layout_width="fill_parent"
    	android:layout_height="fill_parent" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent" 
            android:orientation="vertical" >

            <TextView
                android:id="@+id/drugLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_name" />
            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" 
                android:hint="@string/label_name_box"/>
            
            <TextView
                android:id="@+id/labelType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_type" />
            <Spinner
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" 
                android:prompt="@string/drug_prompt" />

            <TextView
                android:id="@+id/labelBrand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_brand" />
            <EditText
                android:id="@+id/brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" 
                android:hint="@string/label_brand_box"/>

            <TextView
                android:id="@+id/labelPurchase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_purchase" />
            <DatePicker
                android:id="@+id/purchase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/labelExpire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_expire" />
            <DatePicker
                android:id="@+id/expire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/labelPathology"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_pathology" />
            <EditText
                android:id="@+id/pathology"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" 
                android:hint="@string/label_pathology_box" />

            <TextView
                android:id="@+id/labelMinAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_min_age" />
            <EditText
                android:id="@+id/minAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" 
                android:hint="@string/label_min_age_box"/>

             <TextView
                android:id="@+id/labelCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_category" />
            <Spinner
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" 
                android:prompt="@string/category_prompt" />            
			
			<Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/button_save" 
                android:onClick="onSaveClick"/>
            
        </LinearLayout>
	</ScrollView>
</LinearLayout>